cyclonedx-bom/tests/spec/snapshots/1.3/it_should_parse_all_of_the_valid_json_specifications@valid-metadata-author-1.3.json.snap
---
source: cyclonedx-bom/tests/specification_tests.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.3/valid-metadata-author-1.3.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.3",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "metadata": {
    "authors": [
      {
        "name": "Samantha Wright",
        "email": "samantha.wright@example.com",
        "phone": "800-555-1212"
      }
    ]
  },
  "components": []
}
